--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=https://squidfunk.github.io/mkdocs-material/schema.json
 site_name: Mistral Client
-site_url: https://mydomain.org
+site_url: https://thomas-marquis.github.io
 repo_url: https://github.com/thomas-marquis/mistral-client
 repo_name: thomas-marquis/mistral-client
 site_author: Thomas Marquis
