--- a/.github/workflows/doc.yaml
+++ b/.github/workflows/doc.yaml
@@ -1,9 +1,8 @@
 name: Documentation
 
 on:
-  push:
-    tags:
-      - 'v*.*.*'
+  release:
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -36,4 +35,4 @@ jobs:
 
       - run: uv sync
 
-      - run: mkdocs gh-deploy --force
+      - run: uv run -m mkdocs gh-deploy --force
